k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartbudget-service
  namespace: smartbudget
  labels:
    app: smartbudget
  annotations:
    prometheus.io/port: "3000"
spec:
  selector:
    app: smartbudget
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
